--- a/src/Enhance/Views/ShellView.xaml
+++ b/src/Enhance/Views/ShellView.xaml
@@ -15,10 +15,28 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
-    <Grid>
-		<TextBlock Text="Hello Caliburn Micro!"
-		           VerticalAlignment="Center"
-		           HorizontalAlignment="Center"
-		           FontSize="20" />
-	</Grid>
+    <Grid Margin="10, 30">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0" Margin="0, 0, 10, 0">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <ListBox Grid.Row="0" x:Name="Scanners" DisplayMemberPath="Name" Margin="0, 0, 0, 5" />
+            <Button Grid.Row="1" x:Name="Scan" Content="Scan" Width="60" />
+        </Grid>
+
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <Image Grid.Row="0" Source="{Binding Image}" Stretch="Uniform" />
+            <ProgressBar Grid.Row="1" x:Name="Progress" Visibility="{Binding IsProgressVisible}" IsIndeterminate="True" IsEnabled="True" Width="300" HorizontalAlignment="Center"/>
+        </Grid>
+    </Grid>
 </Controls:MetroWindow>
