Spike of using Phoenix

--- a/src/Enhance/App.xaml
+++ b/src/Enhance/App.xaml
@@ -1,14 +1,12 @@
-﻿<Application x:Class="Enhance.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-             xmlns:local="clr-namespace:Enhance">
-    <Application.Resources>
+﻿<Autofac:AutofacPhoenixApplication x:Class="Enhance.App"
+                                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                                   xmlns:Autofac="clr-namespace:Phoenix.Extensions.Autofac;assembly=Phoenix.Extensions.Autofac">
+    <Autofac:AutofacPhoenixApplication.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary>
-                    <local:AppBootstrapper x:Key="bootstrapper" />
-                </ResourceDictionary>
+                <ResourceDictionary Source="Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Application.Resources>
-</Application>
+    </Autofac:AutofacPhoenixApplication.Resources>
+</Autofac:AutofacPhoenixApplication>
