--- a/src/Enhance/Shell.xaml
+++ b/src/Enhance/Shell.xaml
@@ -1,9 +1,9 @@
-﻿<Controls:MetroWindow x:Class="Enhance.Views.ShellView"
+﻿<Controls:MetroWindow x:Class="Enhance.Shell"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                       ShowTitleBar="False">
-    <Window.Resources>
+    <Controls:MetroWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
@@ -14,29 +14,5 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Window.Resources>
-    <Grid Margin="10, 30">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-
-        <Grid Grid.Column="0" Margin="0, 0, 10, 0">
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <ListBox Grid.Row="0" x:Name="Scanners" DisplayMemberPath="Name" Margin="0, 0, 0, 5" />
-            <Button Grid.Row="1" x:Name="Scan" Content="Scan" Width="60" />
-        </Grid>
-
-        <Grid Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Image Grid.Row="0" Source="{Binding Image}" Stretch="Uniform" />
-            <ProgressBar Grid.Row="1" x:Name="Progress" Visibility="{Binding IsProgressVisible}" IsIndeterminate="True" IsEnabled="True" Width="300" HorizontalAlignment="Center"/>
-        </Grid>
-    </Grid>
+    </Controls:MetroWindow.Resources>
 </Controls:MetroWindow>
