--- a/src/Enhance/Shell.xaml
+++ b/src/Enhance/Shell.xaml
@@ -2,6 +2,8 @@
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      Title="Enhance"
+                       Width="750" Height="500"
                       ShowTitleBar="False">
     <Controls:MetroWindow.Resources>
         <ResourceDictionary>
@@ -13,6 +15,13 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Color x:Key="AccentColor">#e44600</Color>
         </ResourceDictionary>
     </Controls:MetroWindow.Resources>
+    <Controls:MetroWindow.Background>
+        <RadialGradientBrush>
+            <GradientStop Color="#2C2C2C" Offset="1"/>
+            <GradientStop Color="#FF5C5C5C"/>
+        </RadialGradientBrush>
+    </Controls:MetroWindow.Background>
 </Controls:MetroWindow>
