--- a/src/Enhance/Features/Index.xaml
+++ b/src/Enhance/Features/Index.xaml
@@ -17,17 +17,24 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
+
+        <Controls:Tile Title="scan image" Grid.Row="1" Commands:Invoke.OnClick="Home.ScanDocument" Width="175" Height="175" >
+            <Grid>
+                <TextBlock Text="p" FontFamily="/Resources/#Entypo" FontSize="180" Margin="0,-35,0,0"/>
+            </Grid>
+        </Controls:Tile>
+
+        <Controls:Tile Title="scan document" Grid.Row="1" Grid.Column="1" Width="175" Height="175" >
+            <Grid>
+                <TextBlock Text="l" FontFamily="/Resources/#Entypo" FontSize="180" Margin="0,-35,0,0"/>
+            </Grid>
+        </Controls:Tile> 
+
+        <Controls:Tile Title="manage documents" Grid.Row="1" Grid.Column="2" Width="175" Height="175" >
+            <Grid>
+                <TextBlock Text="t" FontFamily="/Resources/#Entypo" FontSize="180" Margin="0,-35,0,0"/>
+            </Grid>
+        </Controls:Tile>
         
-        <Controls:Tile Title="Scan Document"
-                       Grid.Row="1"
-                       Commands:Invoke.OnClick="Home.ScanDocument"/>
-
-        <Controls:Tile Title="Scan Image"
-                       Grid.Row="1"
-                       Grid.Column="1"/>
-
-        <Controls:Tile Title="Manage Documents"
-                       Grid.Row="1"
-                       Grid.Column="2" />
     </Grid>
 </UserControl>
