Better resource management of custom styles

--- a/src/Enhance/Shell.xaml
+++ b/src/Enhance/Shell.xaml
@@ -14,8 +14,8 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
+                <ResourceDictionary Source="/Resources/Enhance.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <Color x:Key="AccentColor">#e44600</Color>
         </ResourceDictionary>
     </Controls:MetroWindow.Resources>
     <Controls:MetroWindow.Background>
