--- a/src/Enhance/Features/ScanDocument.xaml
+++ b/src/Enhance/Features/ScanDocument.xaml
@@ -38,9 +38,9 @@
                 Style="{DynamicResource MetroCircleButtonStyle}"
                 Command="{Binding BackHomeCommand}">
             <Grid>
-                <Rectangle Width="20" Height="20">
+                <Rectangle Width="20" Height="15">
                     <Rectangle.Fill>
-                        <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_home}" />
+                        <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_arrow_left}" />
                     </Rectangle.Fill>
                 </Rectangle>
             </Grid>
@@ -51,7 +51,7 @@
                 <RowDefinition />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <ListBox Grid.Row="0" x:Name="Scanners" ItemsSource="{Binding Scanners}" SelectedItem="{Binding SelectedScanner}"  DisplayMemberPath="Name" Margin="0, 0, 0, 5" />
+            <ListView Grid.Row="0" x:Name="Scanners" ItemsSource="{Binding Scanners}" SelectedItem="{Binding SelectedScanner}"  DisplayMemberPath="Name" Margin="0, 0, 0, 5" />
             <Button Grid.Row="1" x:Name="Scan" Content="Scan" Width="60" Command="{Binding ScanCommand}" />
         </Grid>
 
