--- a/src/Enhance/Features/Index.xaml
+++ b/src/Enhance/Features/Index.xaml
@@ -7,34 +7,36 @@
              xmlns:Commands="clr-namespace:Phoenix.Commands;assembly=Phoenix" mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-         <Grid.RowDefinitions>
+        <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition />
+            <ColumnDefinition Width="650" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <Controls:Tile Title="scan image" Grid.Row="1" Commands:Invoke.OnClick="Home.ScanDocument" Width="175" Height="175" >
-            <Grid>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            
+            <Controls:Tile Title="scan image" Grid.Column="0" Commands:Invoke.OnClick="Home.ScanDocument" Width="175" Height="175" >
                 <TextBlock Text="p" FontFamily="/Resources/#Entypo" FontSize="180" Margin="0,-35,0,0"/>
-            </Grid>
-        </Controls:Tile>
+            </Controls:Tile>
 
-        <Controls:Tile Title="scan document" Grid.Row="1" Grid.Column="1" Width="175" Height="175" >
-            <Grid>
+            <Controls:Tile Title="scan document" Grid.Column="1" Width="175" Height="175" >
                 <TextBlock Text="l" FontFamily="/Resources/#Entypo" FontSize="180" Margin="0,-35,0,0"/>
-            </Grid>
-        </Controls:Tile> 
+            </Controls:Tile>
 
-        <Controls:Tile Title="manage documents" Grid.Row="1" Grid.Column="2" Width="175" Height="175" >
-            <Grid>
+            <Controls:Tile Title="manage documents" Grid.Column="2" Width="175" Height="175" >
                 <TextBlock Text="t" FontFamily="/Resources/#Entypo" FontSize="180" Margin="0,-35,0,0"/>
-            </Grid>
-        </Controls:Tile>
-        
+            </Controls:Tile>
+        </Grid>
     </Grid>
 </UserControl>
