--- a/src/Enhance/Features/DocScanDocument.xaml
+++ b/src/Enhance/Features/DocScanDocument.xaml
@@ -1,23 +1,22 @@
-﻿<UserControl x:Class="Enhance.Features.ManageDocuments"
+﻿<UserControl x:Class="Enhance.Features.DocScanDocument"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:Transitions="clr-namespace:Phoenix.Frames.Transitions;assembly=Phoenix"
-             xmlns:Features="clr-namespace:Enhance.Features"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" mc:Ignorable="d"
+             xmlns:Features="clr-namespace:Enhance.Features" mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
-             d:DataContext="{d:DesignInstance Features:ManageDocumentsViewModel}">
+             d:DataContext="{d:DesignInstance Features:DocScanDocumentViewModel}">
 
     <UserControl.Resources>
         <ResourceDictionary Source="/Resources/Icons.xaml" />
     </UserControl.Resources>
     <Transitions:TransitionService.NavigateForwardTransition>
-        <Transitions:SlideTransition Direction="Back" />
+        <Transitions:SlideTransition Direction="Forward" />
     </Transitions:TransitionService.NavigateForwardTransition>
     <Transitions:TransitionService.NavigateBackTransition>
-        <Transitions:SlideTransition Direction="Forward" />
+        <Transitions:SlideTransition Direction="Back" />
     </Transitions:TransitionService.NavigateBackTransition>
 
     <Grid Margin="20">
@@ -50,8 +49,30 @@
         <Grid Grid.Column="0" Grid.Row="1" Margin="0, 20, 10, 0">
             <Grid.RowDefinitions>
                 <RowDefinition />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <TreeView Grid.Row="0" ItemsSource="{Binding Directories}" Foreground="White" />
+           
+            <ListView Grid.Row="0" x:Name="Scanners" ItemsSource="{Binding Scanners}" SelectedItem="{Binding SelectedScanner}"  DisplayMemberPath="Name" Margin="0, 0, 0, 25" />
+            <ComboBox Grid.Row="1" ItemsSource="{Binding ResolutionsList}" SelectedItem="{Binding Resolution}" DisplayMemberPath="Name" Foreground="White" Margin="0,0,0,25" />
+            
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+            
+                <Button Grid.Column="0" Grid.Row="0" x:Name="Preview" Content="Preview" Width="60" Command="{Binding PreviewCommand}" />
+                <Button Grid.Column="2" Grid.Row="0" x:Name="Scan" Content="Scan" Width="60" Command="{Binding ScanCommand}" />
+                
+                <Button Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" x:Name="Manage" Content="Manage Image" Command="{Binding ManageCommand}" Margin="0,15,0,0" />
+            </Grid>
         </Grid>
 
         <Image Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" Source="{Binding Image.Image}" Stretch="Uniform" />
